# gE

./: CMakeLists.txt  cube.dae  foil.pvr  foil_nor.pvr  foil_rough.pvr  gun.dae  plane.dae  tile.pvr  tile_nor.pvr  tile_rough.pvr  x.pvr
gEC/: Result.h  main.cpp
gEC/Asset/: AssetManager.h  GLAsset.h  IncludeManager.cpp  IncludeManager.h
gEC/Asset/Buffer/: Buffer.h  Framebuffer.cpp  Framebuffer.h  Renderbuffer.cpp  Renderbuffer.h
gEC/Asset/Shader/: Material.cpp  Material.h  Shader.cpp  Shader.h  ShaderStage.cpp  ShaderStage.h
gEC/Asset/Texture/: Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h
gEC/Asset/VAO/: IndexedVAO.cpp  IndexedVAO.h  MeshManager.cpp  MeshManager.h  RenderMesh.cpp  RenderMesh.h  VAO.cpp  VAO.h
gEC/Component/: Component.cpp  Component.h  Entity.cpp  Entity.h
gEC/Component/Components/: Behavior.h  Camera.cpp  Camera.h  MaterialHolder.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
gEC/Resource/: depth.vert  empty.frag  passthrough.frag  passthrough.vert
gEC/Utility/: FileHelper.cpp  FileHelper.h  Frustum.h  PVR.cpp  PVR.h
gEC/Windowing/: DemoWindow.cpp  DemoWindow.h  Stage.h  Window.cpp  Window.h
gEGL/GLAD/: glad.c  glad.h
gEGL/GLFW/: glfw3.h
gEGL/KHR/: khrplatform.h
gEGL/glm/: fwd.hpp  glm.hpp  mat3x2.hpp  packing.hpp  vector_relational.hpp
gEGL/glm/detail/: _swizzle.hpp  setup.hpp  type_float.hpp  type_half.inl  type_quat.hpp  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
gEGL/glm/ext/: matrix_double2x2.hpp  matrix_double2x2_precision.hpp  matrix_double2x3.hpp  matrix_double2x3_precision.hpp  matrix_double2x4.hpp  matrix_double2x4_precision.hpp  matrix_double3x2.hpp  (+64 more)
gEModel/: Mesh.h  gEModel.cpp  gEModel.h  gETF.h
gEModel/Assimp/: Importer.hpp  MathFunctions.h  aabb.h  anim.h  camera.h  color4.h  color4.inl  config.h  defs.h  light.h  material.h  material.inl  matrix3x3.h  matrix3x3.inl  matrix4x4.h  matrix4x4.inl  mesh.h  metadata.h  postprocess.h  quaternion.h  quaternion.inl  scene.h  texture.h  types.h  vector2.h  vector2.inl  vector3.h  vector3.inl
res/: TexturesCom_Marble_TilesRectangle_512_albedo.tif  TexturesCom_Marble_TilesRectangle_512_normal.tif  marble.pvr  marble_nor.pvr  marble_rough.pvr  marble_rough.tif
res/script/: CameraMovement.cpp  CameraMovement.h  InventoryScript.cpp  InventoryScript.h  StaticRenderer.cpp  StaticRenderer.h  Weapon.h
res/shader/: PBRMaterial.cpp  PBRMaterial.h  alpha.frag  bloom.comp  brdf.comp  camera.glsl  compositefps.comp  contactshadow.frag  convolution.frag  default.depth.frag  default.frag  default.vert  demowindow.glsl  highz.comp  noise.glsl  objectinfo.glsl  ray.glsl  skybox.frag  skybox.vert  ssao.glsl  ssr.frag  taa.frag
res/shdrinc/: cubemap.glsl  noise.glsl  ray.glsl  shadow.glsl  ssao.glsl  taa.glsl
(+17 files in other folders)
